--- a/.editorconfig
+++ b/.editorconfig
@@ -3,4 +3,7 @@ root = true
 
 [*]
 indent_style = tab
-end_of_line = LF
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
