--- a/labs/architecture-examples/derby/package.json
+++ b/labs/architecture-examples/derby/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "todomvc-derbyjs",
-  "description": "",
-  "version": "0.0.0",
+  "name": "todomvc-derby",
+  "description": "TodoMVC todo app using Derby",
+  "version": "0.1.0",
   "main": "./server.js",
   "dependencies": {
     "derby": "0.3.13",
