--- a/labs/architecture-examples/derby/package.json
+++ b/labs/architecture-examples/derby/package.json
@@ -4,8 +4,8 @@
 	"version": "0.1.0",
 	"main": "server.js",
 	"dependencies": {
-		"derby": "git://github.com/codeparty/derby#ae29fac69d",
-		"racer": "git://github.com/codeparty/racer#484b170ee5",
+		"derby": "git://github.com/codeparty/derby#master",
+		"racer": "git://github.com/codeparty/racer#master",
 		"express": "~3.0.1",
 		"gzippo": "~0.2.0"
 	},
