--- a/labs/dependency-examples/somajs_require/bower.json
+++ b/labs/dependency-examples/somajs_require/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
 	  "todomvc-common": "~0.1.6",
 	  "director": "~1.2.0",
+	  "requirejs": "~2.1.5",
 	  "soma.js": "~2.0.0",
 	  "soma-template": "~0.1.8"
   }
