--- a/architecture-examples/maria/bower.json
+++ b/architecture-examples/maria/bower.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "todomvc-common": "~0.1.4",
-    "director": "~1.2.0"
+    "director": "~1.2.0",
+    "maria-bower": "~1.0.0",
+    "aristocrat-bower": "~1.0.1"
   }
 }
