--- a/labs/architecture-examples/epitome/bower.json
+++ b/labs/architecture-examples/epitome/bower.json
@@ -2,7 +2,7 @@
   "name": "todomvc-epitome",
   "version": "0.0.0",
   "dependencies": {
-    "epitome": "0.3.1",
-    "todomvc-common": "~0.1.6"
+    "todomvc-common": "~0.1.6",
+    "Epitome": "~0.3.1"
   }
 }
