--- a/labs/architecture-examples/react/bower.json
+++ b/labs/architecture-examples/react/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "todomvc-common": "~0.1.7",
-    "react": "~0.4.0"
+    "react": "~0.4.0",
+    "director": "~1.2.0"
   }
 }
