--- a/labs/architecture-examples/backbone_marionette/bower.json
+++ b/labs/architecture-examples/backbone_marionette/bower.json
@@ -2,9 +2,10 @@
   "name": "todomvc-backbone-marionette",
   "version": "0.0.0",
   "dependencies": {
-    "todomvc-common": "~0.1.4",
+    "jquery": "~1.10.2",
+    "todomvc-common": "~0.1.7",
     "underscore": "~1.4.4",
-    "backbone.localStorage": "~1.1.0",
-    "backbone.marionette": "~1.0.0-rc6"
+    "backbone.localStorage": "~1.1.6",
+    "backbone.marionette": "~1.0.4"
   }
 }
