flight: upgrade libraries
Upgraded to flight 1.0.4 which removed `Component#bind` in favor of the native
or polyfilled `Function#bind` and used the new require.js bower format.

Waiting for @phuu to upgrade to Flight 1.1. :)

--- a/dependency-examples/flight/bower.json
+++ b/dependency-examples/flight/bower.json
@@ -4,9 +4,10 @@
   "dependencies": {
     "depot": "~0.1.4",
     "es5-shim": "git://github.com/kriskowal/es5-shim.git#2.0.0",
-    "flight": "~1.0.3",
+    "flight": "~1.0.4",
     "jquery": "1.8.3",
     "requirejs": "~2.1.5",
-    "todomvc-common": "~0.1.4"
+    "todomvc-common": "~0.1.4",
+    "requirejs-text": "~2.0.10"
   }
 }
