--- a/labs/architecture-examples/typescript-angular/todo.csproj
+++ b/labs/architecture-examples/typescript-angular/todo.csproj
@@ -1,49 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>
-    </ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{0A2B594A-1E06-46A8-A3B8-4E58C1071815}</ProjectGuid>
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>todo</RootNamespace>
-    <AssemblyName>todo</AssemblyName>
+    <OutputPath>bin</OutputPath>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
     <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
+  <PropertyGroup>
+    <RootNamespace>todo</RootNamespace>
+  </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <ProjectExtensions>
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
@@ -62,95 +42,44 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-  </PropertyGroup>
   <ItemGroup>
     <Content Include="index.html" />
-    <Content Include="js\app.js">
-      <DependentUpon>Application.ts</DependentUpon>
-    </Content>
-    <Content Include="js\Application.ts" />
-    <Content Include="js\controllers\TodoCtrl.js">
-      <DependentUpon>TodoCtrl.ts</DependentUpon>
-    </Content>
-    <Content Include="js\controllers\TodoCtrl.ts" />
-    <Content Include="js\directives\TodoBlur.js">
-      <DependentUpon>TodoBlur.ts</DependentUpon>
-    </Content>
-    <Content Include="js\directives\TodoBlur.ts" />
-    <Content Include="js\directives\TodoFocus.js">
-      <DependentUpon>TodoFocus.ts</DependentUpon>
-    </Content>
-    <Content Include="js\directives\TodoFocus.ts" />
-    <Content Include="js\interfaces\ITodoScope.js">
-      <DependentUpon>ITodoScope.ts</DependentUpon>
-    </Content>
-    <Content Include="js\interfaces\ITodoScope.ts" />
-    <Content Include="js\interfaces\ITodoStorage.js">
-      <DependentUpon>ITodoStorage.ts</DependentUpon>
-    </Content>
-    <Content Include="js\interfaces\ITodoStorage.ts" />
-    <Content Include="js\libs\angular-1.0.d.ts" />
-    <Content Include="js\libs\angular\angular.min.js" />
-    <Content Include="js\libs\jquery-1.8.d.ts" />
-    <Content Include="js\models\TodoItem.js">
-      <DependentUpon>TodoItem.ts</DependentUpon>
-    </Content>
-    <Content Include="js\models\TodoItem.ts" />
-    <Content Include="js\services\TodoStorage.ts" />
-    <Content Include="js\_all.js">
-      <DependentUpon>_all.ts</DependentUpon>
-    </Content>
-    <Content Include="js\_all.ts" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ReadMe.md" />
+    <TypeScriptCompile Include="js\_all.ts" />
+    <TypeScriptCompile Include="js\libs\angular.d.ts" />
+    <TypeScriptCompile Include="js\libs\jquery.d.ts" />
+    <TypeScriptCompile Include="js\Application.ts" />
+    <TypeScriptCompile Include="js\controllers\TodoCtrl.ts" />
+    <TypeScriptCompile Include="js\directives\TodoBlur.ts" />
+    <TypeScriptCompile Include="js\directives\TodoFocus.ts" />
+    <TypeScriptCompile Include="js\interfaces\ITodoScope.ts" />
+    <TypeScriptCompile Include="js\interfaces\ITodoStorage.ts" />
+    <TypeScriptCompile Include="js\models\TodoItem.ts" />
+    <TypeScriptCompile Include="js\services\TodoStorage.ts" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="js\directives\TodoBlur.js.map">
-      <DependentUpon>TodoBlur.ts</DependentUpon>
-    </Content>
+    <None Include="ReadMe.md" />
+    <Content Include="web.config" />
+    <None Include="web.Debug.config">
+      <DependentUpon>web.config</DependentUpon>
+    </None>
+    <None Include="web.Release.config">
+      <DependentUpon>web.config</DependentUpon>
+    </None>
   </ItemGroup>
-  <ItemGroup>
-    <Content Include="js\directives\TodoFocus.js.map">
-      <DependentUpon>TodoFocus.ts</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="js\app.js.map">
-      <DependentUpon>Application.ts</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="js\controllers\TodoCtrl.js.map">
-      <DependentUpon>TodoCtrl.ts</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="js\_all.js.map">
-      <DependentUpon>_all.ts</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="js\models\TodoItem.js.map">
-      <DependentUpon>TodoItem.ts</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="js\interfaces\ITodoScope.js.map">
-      <DependentUpon>ITodoScope.ts</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="js\interfaces\ITodoStorage.js.map">
-      <DependentUpon>ITodoStorage.ts</DependentUpon>
-    </Content>
-  </ItemGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <PropertyGroup>
+    <TypeScriptOutFile>js\Application.js</TypeScriptOutFile>
+    <TypeScriptTarget>ES3</TypeScriptTarget>
+    <TypeScriptModuleKind>AMD</TypeScriptModuleKind>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+    <TypeScriptRemoveComments>false</TypeScriptRemoveComments>
+    <TypeScriptSourceMap>true</TypeScriptSourceMap>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <TypeScriptRemoveComments>true</TypeScriptRemoveComments>
+    <TypeScriptSourceMap>false</TypeScriptSourceMap>
+  </PropertyGroup>
+  <Import Project="$(VSToolsPath)\TypeScript\Microsoft.TypeScript.targets" />
 </Project>
