add npm script watch data-yield header in markup use data-context todo move view-related methods to view reorder model definition, use @Alfred simplify which tab is active clean up routes put run in HTML save when completed changes When done editing, trim the title and save the record, if no title, delete record change form binding, make views for other controller actions let binding save checked todos, rename keypress listener

--- a/labs/architecture-examples/batman/package.json
+++ b/labs/architecture-examples/batman/package.json
@@ -7,7 +7,8 @@
     "coffee-script": "~1.6.2"
   },
   "scripts": {
-    "compile": "coffee -c app.coffee"
+    "compile": "coffee -c app.coffee",
+    "watch": "coffee -wc app.coffee"
   },
   "private": true
 }
