--- a/architecture-examples/emberjs/bower.json
+++ b/architecture-examples/emberjs/bower.json
@@ -5,7 +5,8 @@
     "todomvc-common": "~0.1.4",
     "jquery": "~1.9.1",
     "handlebars": "~1.0.0-rc.3",
-    "ember": "~1.0.0-rc.1",
+    "ember": "~1.0.0",
+    "ember-data": "1.0.0-beta.1",
     "ember-localstorage-adapter": "latest"
   }
 }
