--- a/architecture-examples/knockoutjs/bower.json
+++ b/architecture-examples/knockoutjs/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "todomvc-common": "~0.1.4",
-    "knockout.js": "~2.2.0rc",
-    "director": "~1.1.10"
+    "knockout.js": "~3.0.0",
+    "director": "~1.2.0"
   }
 }
